# privacy_meter_dev

./: .gitignore  README.md  pyproject.toml
demo_notebooks/: demo.ipynb  demo_audit_dp.ipynb  demo_aws_multi_gpu.ipynb  demo_duci.ipynb  demo_ramia.ipynb
documentation/: mia.md  ramia.md
privacy_meter/auditors/: run_audit_dp.py  run_duci.py  run_mia.py  run_range_mia.py
privacy_meter/dataset/: range_dataset.py  utils.py
privacy_meter/models/: utils.py
privacy_meter/modules/duci/: module_duci.py
privacy_meter/trainers/: parallel_trainer.py
