[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Privacy-Meter"
version = "2.0.0"
description = "An open-source library to audit data privacy in ML algorithms"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Reza", email = "reza@comp.nus.edu.sg" }]
maintainers = [{ name = "Jiashu Tao", email = "jiashut@comp.nus.edu.sg" }]
homepage = "https://github.com/privacytrustlab/ml_privacy_meter"
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12"
]

[tool.setuptools.packages.find]
where = ["."]
# exclude = ["tests", "docs"]

[tool.setuptools.manifest]
include = [
  "README.md",
  "LICENSE",
  "requirements.txt"
]

prune = ["demo*"]